--- a/email-templates/forgot-pass.pug
+++ b/email-templates/forgot-pass.pug
@@ -2,3 +2,4 @@ extends contaner
 block content
     div
         h1 Don't worry, everyone forgot something
+         a(href=url) Click to restore password
