--- a/email-templates/views/welcome.hbs
+++ b/email-templates/views/welcome.hbs
@@ -1,4 +1,4 @@
-<table style="width: 100%; padding: 45px 35px; box-sizing: border-box">
+<table style="width: 100%; padding: 45px 35px; box-sizing: border-box;">
     <tr>
         <td style="font-size: 18px; text-align: center;">
             {{{userName}}}, welcome on our platform!
@@ -12,7 +12,7 @@
         </td>
     </tr>
     <tr>
-        <td style="text-align: center">
+        <td style="text-align: center;">
             <button>SUBMIT</button>
         </td>
     </tr>
